add api /deal/{statementId}/send, refactor MailSenderService
