# dossier/src/main/java/neoflex/chulkov/dto/EmailSendDocumentsDto.java
@@ -1,13 +1,12 @@
 package neoflex.chulkov.dto;
 
-import java.time.LocalDate;
-
-public record EmailMessage (
+public record EmailSendDocumentsDto (
         String firstName,
         String lastName,
         String middleName,
         String email,
         String statementId,
-        LocalDate birthday
+        CreditDto creditDto
 ) {
+
 }
